--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compattnole" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TNOnline</title>
-  <link rel="stylesheet" href="./base.css">
-  <link rel="stylesheet" href="./header.css">
-  <link rel="stylesheet" href="./footer.css">
-  <link rel="stylesheet" href="./bbb.css">
-  <link rel="stylesheet" href="./webstories.css">
-  <link rel="stylesheet" href="./bg-anuncio.css">
-  <link rel="stylesheet" href="./manchetesuitedestaque.css">
-  <link rel="stylesheet" href="./cards.css">
+  <link rel="stylesheet" href="./assets/css/base.css">
+  <link rel="stylesheet" href="./assets/css/componets/topresponsivo.css">
+  <link rel="stylesheet" href="./assets/css/componets/footerResponsivo.css">
+  <link rel="stylesheet" href="./assets/css/pages/bbb.css">
+  <link rel="stylesheet" href="./assets/css/pages/webstories.css">
+  <link rel="stylesheet" href="./assets/css/pages/bg-anuncio.css">
+  <link rel="stylesheet" href="./assets/css/pages/manchetesuitedestaque.css">
+  <link rel="stylesheet" href="./assets/css/pages/cards.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -33,9 +33,9 @@
     <div class="wrapper">
 
 
-      <img class="img-bottom" src="./menu.svg" alt="">
+      <img class="img-bottom" src="./assets/img/svg/menu.svg" alt="">
       <a class="menu" href="#"> MENU</a>
-      <img class="img-bottom" src="./busca.svg" alt="">
+      <img class="img-bottom" src="./assets/img/svg/busca.svg" alt="">
       <input type="text" placeholder="Busca" class="busca">
       <div class="logo-bg">
         <h1 class="logo"><img src="./assets/header/tnonline.png" alt=""></h1>
