--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./assets/css/componets/topresponsivo.css">
   <link rel="stylesheet" href="./assets/css/componets/footerResponsivo.css">
   <link rel="stylesheet" href="./assets/css/pages/bbb.css">
+  <link rel="stylesheet" href="./apuracana.css">
   <link rel="stylesheet" href="./assets/css/pages/webstories.css">
   <link rel="stylesheet" href="./assets/css/pages/bg-anuncio.css">
   <link rel="stylesheet" href="./assets/css/pages/manchetesuitedestaque.css">
@@ -42,7 +43,11 @@
 
       </div>
       <div class="ed-impresso">
-        <a class="ed-impresso-foto" href="#"><img src="./assets/header/Edicao-do-dia-15-de-marco-de-2023-00738467-0-202303142140-xs.webp" alt="">LEIA A ÚLTIMA EDIÇÃO</a>
+
+        <a class="ed-impresso-foto" href="#"><img class="mini-tooltip" src="./assets/header/Edicao-do-dia-15-de-marco-de-2023-00738467-0-202303142140-xs.webp" alt="">LEIA A ÚLTIMA EDIÇÃO </a>
+
+        <span><img class="med-tooltip" src="./assets/img/tooltip-edicao-do-dia.webp" alt=""></span>
+
       </div>
     </div>
     <section class="bg-total">
@@ -50,7 +55,7 @@
 
         <nav class="wrapper-ul">
           <ul>
-            <li><a href="/"></a>apucarana</li>
+            <li><a href="apucarana.html"></a>apucarana</li>
             <li><a href="/arapongas"></a>arapongas</li>
             <li><a href="/vale do ivaí"></a>vale do ivaí</li>
             <li><a href="/paraná"></a>paraná</li>
@@ -95,16 +100,21 @@
 
       <div class="ul-maislidas">
         <ul>
-          <li><a href="#"></a>Mulher morre após capotar carro no Contorno Norte</li><span>1</span>
+          <li><a href="#"></a>Mulher morre após capotar carro no Contorno Norte</li>
+          <p>1</p>
 
           <li><a href="#">
-            </a>Familia cria ação entre amigos em prol de corretor</li><span>2</span>
+            </a>Familia cria ação entre amigos em prol de corretor</li>
+          <p>2</p>
 
-          <li><a href="#"></a>7 sintomas que podem indiciar se uma pessoa está com encosto</li><span>3</span>
+          <li><a href="#"></a>7 sintomas que podem indiciar se uma pessoa está com encosto</li>
+          <p>3</p>
 
-          <li><a href="#"></a>Mega-Sena: confira os números sorteados nesta terça-feira (14)</li><span>4</span>
+          <li><a href="#"></a>Mega-Sena: confira os números sorteados nesta terça-feira (14)</li>
+          <p>4</p>
 
-          <li><a href="#"></a>Marrone faz harmonização facial e comemora resultado</li><span>5</span>
+          <li><a href="#"></a>Marrone faz harmonização facial e comemora resultado</li>
+          <p>5</p>
 
         </ul>
       </div>
@@ -112,8 +122,8 @@
 
   </header>
 
-  <!-- 
-  <main>
+
+  <!-- <main>
 
     <section class="container-anuncio">
       <div class="wrapper"></div>
@@ -583,7 +593,6 @@
 
 
 
-
             </div>
 
           </div>
@@ -623,7 +632,7 @@
 
 
 
-  </main> -->
+  </main>  -->
 
 
 
