--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <input type="text" placeholder="Busca" class="busca">
 
       <div class="logo-bg">
-        <h1 class="logo"><img src="./assets/header/tnonline.png" alt=""></h1>
+        <h1 class="logo"><img src="./assets/header/tnonline_logo.svg" alt="Logo TNonline "></h1>
 
       </div>
 
