--- a/index.html
+++ b/index.html
@@ -30,12 +30,6 @@
       <div class="bg-uol"></div>
 
     </div>
-
-
-
-
-
-
     <div class="wrapper">
 
 
@@ -50,7 +44,7 @@
       <input type="text" placeholder="Busca" class="busca">
 
       <div class="logo-bg">
-        <h1 class="logo"><img src="./assets/header/tnonline_logo.svg" alt="Logo TNonline "></h1>
+        <h1 class="logo"><img src="./assets/header/tnonline.png" alt=""></h1>
 
       </div>
 
