--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
 
 
 
-      <button style="cursor:pointer" onClick=" Abrirnav()"><img class="img-bottom" src="./assets/img/svg/menu.svg" alt=""></button>
+      <button style="cursor:pointer" onClick=" Abrirnav()"><img class="img-bottom" src="./assets/img/svg/menu.svg" alt="menu"></button>
       </button>
 
       <a class="menu" href="#" onClick=" Abrirnav()">MENU</a>
 
-      <img class="img-bottom" src="./assets/img/svg/busca.svg" alt="">
+      <img class="img-bottom" src="./assets/img/svg/busca.svg" alt="busca">
 
       <input type="text" placeholder="Busca" class="busca">
 
       <div class="logo-bg">
-        <h1 class="logo"><img src="./assets/header/tnonline.png" alt=""></h1>
+        <h1 class="logo"><img src="./assets/header/tnonline.png" alt="Logo tnonline"></h1>
 
       </div>
 
@@ -53,7 +53,7 @@
 
         <a class="ed-impresso-foto " href="#"><img class="mini-tooltip" src="./assets/header/Edicao-do-dia-15-de-marco-de-2023-00738467-0-202303142140-xs.webp" alt="">LEIA A ÚLTIMA EDIÇÃO</a>
         <span>
-          <img class="med-tooltip" src="./assets/img/tooltip-edicao-do-dia.webp" alt="">
+          <img class="med-tooltip" src="./assets/img/tooltip-edicao-do-dia.webp" alt=" edição impressa">
         </span>
       </div>
     </div>
@@ -130,7 +130,7 @@
 
     <div class="menu-aside" id="menu-aside">
       <div class=" menu-header">
-        <img class=" logo-menu-svg" src="/assets/img/logotype-responsivo.svg" style="width: 200px; height: 64px;" alt="Logo">
+        <img class=" logo-menu-svg" src="/assets/img/logotype-responsivo.svg" style="width: 200px; height: 64px;" alt="Logo Responsivo">
         <button id="fechar-menu" onClick="Fecharnav()">
           <span class=" close-menu-svg">
             <img src="./assets/img/svg/times.svg" alt="">
@@ -862,7 +862,7 @@
 
 
         <div>
-          <a href="logo-white"><img src="./assets/footer/white-min.png" alt=""></a>
+          <a href="logo-white"><img src="./assets/footer/white-min.png" alt="Logo white"></a>
         </div>
 
         <div class="span-broken">
