--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <link rel="stylesheet" href="./assets/css/pages/manchetesuitedestaque.css">
   <link rel="stylesheet" href="./assets/css/pages/cards.css">
   <link rel="stylesheet" href="./script.js">
-  <link rel="preload" href="https://fonts.googleapis.com">
-  <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
 
 
