Google news mobile

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
           <h2 class="article-subheader">latrocínio</h2>
           <h1 class="article-header">Idosa agredida dentro de casa morre em hospital de Apucarana</h1>
           <h2 class="article-lead"> O marido de Maria de Lourdes da Silva também foi espancado e morreu após crime registrado na quarta feira (15/3).</h2>
+
           <div class="social-nav">
             <a href="facebook" class="social-fb"><img src="./assets/img/svg-social/facebook.svg" style="color:blue" alt="facebook"></a>
             <a href="whatsapp" class="social-whats"><img src="./assets/img/svg-social/whatsappbranco.svg" alt="whatsapp"></a>
@@ -238,7 +239,7 @@
             <div class="article.autores" style="margin-top: 10px;margin-left:10px;">
               <span>Escrito por <strong class="article-autor">da Redação</strong></span>
             </div>
-            <div>
+            <div class="article-publish-date">
               <span class="article.InicialPublishDate" style="margin-left: 10px;">Publicado em 21.03.2023, 18:27:28</span><span class="article.publishdate"> Editado em 21.03.2023, 18:30</span>
             </div>
           </div>
@@ -275,14 +276,18 @@
           <p>O chefe da 16ª RS, Marcos Costa, afirma que a situação dos municípios está sendo acompanhada, sobretudo as regiões com índices altos de infestação do mosquito e de casos. "A gente vai dar apoio, orientações para que os municípios desenvolvam trabalhos principalmente para a eliminação de criadouros", ressalta. </p>
         </div>
 
+        <div class="google-news-mobile">
+          <a href="Siga o TN"><img src="./assets/img/svg-colored/google-news.svg" alt=""> Siga o TNOnline no Google News</a>
+        </div>
+
         <div class="categorias-relacionadas">
           <div>
             <h3>categorias relacionadas</h3>
-            <div>
-              <a href="">aedes aegypti</a>
-              <a href="">aedes aegypti</a>
-              <a href="">aedes aegypti</a>
-              <a href="">aedes aegypti</a>
+            <div class="categorias-hashtag">
+              <a href="">#aedes aegypti</a>
+              <a href="">#bom sucesso</a>
+              <a href="">#dengue</a>
+              <a href="">#são pedro do ivai</a>
             </div>
           </div>
 
