--- a/index.html
+++ b/index.html
@@ -221,6 +221,12 @@
           <h1 class="article-header">Idosa agredida dentro de casa morre em hospital de Apucarana</h1>
           <h2 class="article-lead"> O marido de Maria de Lourdes da Silva também foi espancado e morreu após crime registrado na quarta feira (15/3).</h2>
 
+          <div class="article-who-mobile">
+            <span class="article-autor-mobile">Da Redação</span>
+            <span class="article.publishdate-mobile">Editado em 21.03.2023, 18:30</span>
+          </div>
+
+
           <div class="social-nav">
             <a href="facebook" class="social-fb"><img src="./assets/img/svg-social/facebook.svg" style="color:blue" alt="facebook"></a>
             <a href="whatsapp" class="social-whats"><img src="./assets/img/svg-social/whatsappbranco.svg" alt="whatsapp"></a>
