--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compattnole" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="As principais notícias de Apucarana, Arapongas, Ivaiporã e Vale do Ivaí. Vagas de empregos, previsão do tempo, cinema, política, esportes e mais.">
   <title>TNOnline</title>
   <link rel="stylesheet" href="./assets/css/base.css">
   <link rel="stylesheet" href="./assets/css/componets/topresponsivo.css">
@@ -290,10 +291,10 @@
           <div>
             <h3>categorias relacionadas</h3>
             <div class="categorias-hashtag">
-              <a href="">#aedes aegypti</a>
-              <a href="">#bom sucesso</a>
-              <a href="">#dengue</a>
-              <a href="">#são pedro do ivai</a>
+              <a href="aedes aegypti">#aedes aegypti</a>
+              <a href="bom sucesso">#bom sucesso</a>
+              <a href="dengue">#dengue</a>
+              <a href="são pedro do ivai">#são pedro do ivai</a>
             </div>
           </div>
 
