--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 
         <nav class="wrapper-ul">
           <ul>
-            <li><a href="/apucarana.html"></a>apucarana</li>
-            <li><a href="/arapongas"></a>arapongas</li>
-            <li><a href="/vale do ivaí"></a>vale do ivaí</li>
-            <li><a href="/paraná"></a>paraná</li>
-            <li><a href="/politica"></a>política</li>
-            <li><a href="/Vídeos"></a>Vídeos</li>
-            <li><a href="/ultimas"></a>Últimas</li>
+            <li><a aria-label="Apucarana" href="/noticias/apucarana" title="Apucarana"></a>Apucarana</li>
+            <li><a aria-label="Arapongas" href="/noticias/Arapongas" title="Arapongas"></a>Arapongas</li>
+            <li><a aria-label="vale do ivaí" href="/noticias/Vale do ivaí" title="Vale do ivaí"></a>Vale do ivaí</li>
+            <li><a aria-label="Paraná" href="/noticias/Paraná" title="Paraná"></a>Paraná</li>
+            <li><a aria-label="Política" href="/noticias/Política" title="Política"></a>Política</li>
+            <li><a aria-label="Vídeos" href="/noticias/Vídeos" title="Vídeos"></a>Vídeos</li>
+            <li><a aria-label="Últimas" href="/noticias/Últimas" title="Últimas"></a>Últimas</li>
           </ul>
 
         </nav>
