--- a/index.html
+++ b/index.html
@@ -98,25 +98,25 @@
     <section class="wrapper">
       <div class="container-mais-lidas">
         <span>MAIS LIDAS</span>
-        <a href="#">VER TODOS</a>
+        <a aria-label="ver todos" href="/ver" title="todos">VER TODOS</a>
       </div>
 
       <div class="ul-maislidas">
         <ul>
-          <li><a href="#"></a>Mulher morre após capotar carro no Contorno Norte</li>
+          <li><a aria-label="Mulher morre" href="/Mulher" title="Mulher morre"></a>Mulher morre após capotar carro no Contorno Norte</li>
           <p>1</p>
 
-          <li><a href="#">
+          <li><a aria-label="Familia" href="/familia" title="Familia cria ação">
             </a>Familia cria ação entre amigos em prol de corretor</li>
           <p>2</p>
 
-          <li><a href="#"></a>7 sintomas que podem indiciar se uma pessoa está com encosto</li>
+          <li><a aria-label="sintomas" href="/sintomas" title="Sintomas que podem indicar"></a>7 sintomas que podem indiciar se uma pessoa está com encosto</li>
           <p>3</p>
 
-          <li><a href="#"></a>Mega-Sena: confira os números sorteados nesta terça-feira (14)</li>
+          <li><a aria-label="mega-sena" href="/megasena" title="mega-sena"></a>Mega-Sena: confira os números sorteados nesta terça-feira (14)</li>
           <p>4</p>
 
-          <li><a href="#"></a>Marrone faz harmonização facial e comemora resultado</li>
+          <li><a aria-label="Marrone" href="/marrone" title="Marrone faz harmonização"></a>Marrone faz harmonização facial e comemora resultado</li>
           <p>5</p>
 
         </ul>
@@ -124,7 +124,7 @@
     </section>
     <section class="subpage-bg">
       <div class="subpage-wrapper">
-        <a href="home"><img src="./assets/img/svg-social/home.svg" alt=""></a>
+        <a aria-label="home" href="/home" title="home"><img src="./assets/img/svg-social/home.svg" alt="home"></a>
 
         <h2 class="title-cat">Apucarana</h2>
         <img src="./assets/img/svg-social/menu-2.svg" alt="">
@@ -144,21 +144,21 @@
           <img class=" logo-menu-svg" src="./assets/img/logotype-responsivo.svg" style="width: 200px; height: 64px;" alt="Logo Responsivo">
           <button id="fechar-menu" onClick="Fecharnav()">
             <span class=" close-menu-svg">
-              <img src="./assets/img/svg/times.svg" alt="">
+              <img src="./assets/img/svg/times.svg" alt="times">
           </button>
 
           <div class="menu-social">
             <a href="facebook-svg">
-              <img src="./assets/img/svg-social/facebookred.svg" alt="">
+              <img src="./assets/img/svg-social/facebookred.svg" alt="facebook">
             </a>
 
             <a href="twitter-svg">
-              <img src="./assets/img/svg-social/twittered.svg" alt="">
+              <img src="./assets/img/svg-social/twittered.svg" alt="twitter">
             </a>
             <a href="instagram-svg">
-              <img src="./assets/img/svg-social/instagramred.svg" alt="">
+              <img src="./assets/img/svg-social/instagramred.svg" alt="instagram">
             </a>
-            <a href="youtube-svg"><img src="./assets/img/svg-social/youtubered.svg" alt=""></a>
+            <a href="youtube-svg"><img src="./assets/img/svg-social/youtubered.svg" alt="youtube"></a>
           </div>
 
 
@@ -233,7 +233,7 @@
             <a href="whatsapp" class="social-whats"><img src="./assets/img/svg-social/whatsappbranco.svg" alt="whatsapp"></a>
             <a href="impresso" class="social-impresso"><img src="./assets/img/svg-social/newspaperbranco.svg" alt="impresso"></a>
             <a href="twitter" class="social-twitter"><img src="./assets/img/svg-social/twitter.svg" alt="twitter"></a>
-            <a href="comentários" class="social-comentarios"><img src="./assets/img/svg-social/comment-articlebranco.svg" alt=""></a>
+            <a aria-label="comentarios" href="/comentarios" title="comentarios"><img src="./assets/img/svg-social/comment-articlebranco.svg" alt="comentários"></a>
           </div>
 
           <div class="content-1">
@@ -317,17 +317,17 @@
       <div class="wrapper">
         <h2>SIGA O TN NAS REDES SOCIAIS</h2>
         <div class="footer-social">
-          <a href="facebook-svg">
+          <a aria-label="facebook" href="/facebook" title="facebook-svg">
             <img src="./assets/img/svg-social/facebook.svg" alt="">
           </a>
 
-          <a href="twitter-svg">
+          <a aria-label="twitter" href="/twitter" title="twitter-svg">
             <img src="./assets/img/svg-social/twitter.svg" alt="">
           </a>
-          <a href="instagram-svg">
+          <a aria-label="instagram" href="/instagram" title="instagram-svg">
             <img src="./assets/img/svg-social/instagram.svg" alt="">
           </a>
-          <a href="youtube-svg"><img src="./assets/img/svg-social/youtube.svg" alt=""></a>
+          <a aria-label="youtube" href="/youtube" title="youtube-svg"><img src="./assets/img/svg-social/youtube.svg" alt=""></a>
         </div>
       </div>
     </div>
