--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <div class="contato-menu">
 
 
-            <a class="whatsnumber" href=""><img src="./assets/img/svg-social/whatsred.svg" alt=""><span>43 996154000</span></a>
+            <a aria-label="whatsapp" href="/whatsapp" title="Numero Whatsapp"><img src="./assets/img/svg-social/whatsred.svg" alt=""><span>43 996154000</span></a>
 
             <ul class="ul-cat">
               <li style="margin-top: 20px;"><a href="/">apuracana</a>
