--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="As principais notícias de Apucarana, Arapongas, Ivaiporã e Vale do Ivaí. Vagas de empregos, previsão do tempo, cinema, política, esportes e mais.">
   <title>TNOnline</title>
+  <link rel="preload" href="./apuracana.css" as="script">
   <link rel="stylesheet" href="./assets/css/base.css">
   <link rel="stylesheet" href="./assets/css/componets/topresponsivo.css">
   <link rel="stylesheet" href="./assets/css/componets/footerResponsivo.css">
