--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="As principais notícias de Apucarana, Arapongas, Ivaiporã e Vale do Ivaí. Vagas de empregos, previsão do tempo, cinema, política, esportes e mais.">
   <title>TNOnline</title>
   <link rel="preload" href="./apuracana.css" as="script">
+  <link rel="preload" href="./assets/img/acapurana/Parana-soma-8723-casos-de-dengue-e-8-mortes-00740392-0-202303211829-ScaleDownProportional (1).webp" as="image" fetchpriority="high">
   <link rel="stylesheet" href="./assets/css/base.css">
   <link rel="stylesheet" href="./assets/css/componets/topresponsivo.css">
   <link rel="stylesheet" href="./assets/css/componets/footerResponsivo.css">
