--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <title>TNOnline</title>
   <link rel="preload" href="./apuracana.css" as="script">
   <link rel="preload" href="./assets/img/acapurana/Parana-soma-8723-casos-de-dengue-e-8-mortes-00740392-0-202303211829-ScaleDownProportional (1).webp" as="image" fetchpriority="high">
+  <link rel="preload" href="https://fonts.googleapis.com">
+  <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/base.css">
   <link rel="stylesheet" href="./assets/css/componets/topresponsivo.css">
   <link rel="stylesheet" href="./assets/css/componets/footerResponsivo.css">
@@ -19,9 +22,7 @@
   <link rel="stylesheet" href="./assets/css/pages/manchetesuitedestaque.css">
   <link rel="stylesheet" href="./assets/css/pages/cards.css">
   <link rel="stylesheet" href="./script.js">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
+
 
 
 
