--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="As principais notícias de Apucarana, Arapongas, Ivaiporã e Vale do Ivaí. Vagas de empregos, previsão do tempo, cinema, política, esportes e mais.">
   <title>TNOnline</title>
-  <link rel="preload" href="./apuracana.css" as="script">
+
+  <link rel="preconnect" href="https://pabloaugustto.github.io/TNonline/">
+  <link rel="dns-prefetch" href="https://pabloaugustto.github.io/TNonline/">
+  <link rel="preload" href="./fonts/Lato-Regular.ttf" as="font" type="font/otf" crossorigin="">
+
+  <link rel="preload" href="./fonts/Lato-Bold.ttf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="./fonts/Lato-Thin.ttf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="./apuracana.css" as="script" type="font/otf" crossorigin="">
   <link rel="preload" href="./assets/img/acapurana/Parana-soma-8723-casos-de-dengue-e-8-mortes-00740392-0-202303211829-ScaleDownProportional (1).webp" as="image" fetchpriority="high">
-  <link rel="preload" href="https://fonts.googleapis.com">
-  <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="./assets/css/base.css">
   <link rel="stylesheet" href="./assets/css/componets/topresponsivo.css">
   <link rel="stylesheet" href="./assets/css/componets/footerResponsivo.css">
@@ -22,7 +27,6 @@
   <link rel="stylesheet" href="./assets/css/pages/manchetesuitedestaque.css">
   <link rel="stylesheet" href="./assets/css/pages/cards.css">
   <link rel="stylesheet" href="./script.js">
-
 
 
 
