--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <a href="whatsapp" class="social-whats"><img src="./assets/img/svg-social/whatsappbranco.svg" alt="whatsapp"></a>
             <a href="impresso" class="social-impresso"><img src="./assets/img/svg-social/newspaperbranco.svg" alt="impresso"></a>
             <a href="twitter" class="social-twitter"><img src="./assets/img/svg-social/twitter.svg" alt="twitter"></a>
-            <a aria-label="comentarios" href="/comentarios" title="comentarios"><img src="./assets/img/svg-social/comment-articlebranco.svg" alt="comentários"></a>
+            <a aria-label="comentarios" href="/comentarios" title="comentarios" class="social-comentarios"><img src="./assets/img/svg-social/comment-articlebranco.svg" alt="comentários"></a>
           </div>
 
           <div class="content-1">
