--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <div class="contato-menu">
 
 
-            <a aria-label="whatsapp" href="/whatsapp" title="Numero Whatsapp"><img src="./assets/img/svg-social/whatsred.svg" alt=""><span>43 996154000</span></a>
+            <a aria-label="whatsapp" href="/whatsapp" title="Numero Whatsapp" class="contato-menu-whats"><img src="./assets/img/svg-social/whatsred.svg" alt="whatsapp"><span>43 996154000</span></a>
 
             <ul class="ul-cat">
               <li style="margin-top: 20px;"><a href="/">apuracana</a>
@@ -249,7 +249,7 @@
           </div>
 
 
-          <div class="article.publish">
+          <div class="article-publish">
             <div class="article.autores" style="margin-top: 10px;margin-left:10px;">
               <span>Escrito por <strong class="article-autor">da Redação</strong></span>
             </div>
