--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <a class="menu" href="#" onClick=" Abrirnav()">MENU</a>
 
-      <img class="img-bottom" src="./assets/img/svg/busca.svg" alt="busca">
+      <img class="img-busca" src="./assets/img/svg/busca.svg" alt="busca">
 
       <input type="text" placeholder="Busca" class="busca">
 
@@ -78,7 +78,7 @@
         </nav>
         <div class="previsao">
           <b>Jandaia do Sul</b>
-          <img classs="previsao-sun" src="./assets/img/svg-social/weather.svg" alt="Previsão" style="height:20px; margin-right: 10px;">
+          <img class="previsao-sun" src="./assets/img/svg-social/weather.svg" alt="Previsão">
           <span class="previsao-graus">21°C </span>
 
           <img class="euro-img" src="./assets/img/svg-social/euro.svg" alt="euro">
