teste meu aside coment

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <link rel="preconnect" href="https://pabloaugustto.github.io/TNonline/">
   <link rel="dns-prefetch" href="https://pabloaugustto.github.io/TNonline/">
+  <link rel="preload" href="./assets/header/tnonline.png" as="image" fetchpriority="high">
   <link rel="preload" href="./assets/img/acapurana/Parana-soma-8723-casos-de-dengue-e-8-mortes-00740392-0-202303211829-ScaleDownProportional (1).webp" as="image" fetchpriority="high">
   <link rel="preload" href="./fonts/Lato-Regular.ttf" as="font" type="font/otf" crossorigin="">
 
@@ -142,7 +143,7 @@
 
 
 
-      <div class="menu-aside" id="menu-aside">
+      <!-- <div class="menu-aside" id="menu-aside">
         <div class=" menu-header">
           <img class=" logo-menu-svg" src="./assets/img/logotype-responsivo.svg" style="width: 200px; height: 64px;" alt="Logo Responsivo">
           <button id="fechar-menu" onClick="Fecharnav()">
@@ -212,7 +213,7 @@
 
 
         </div>
-      </div>
+      </div> -->
 
   </header>
 
