--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
 
 
 
-
-      <!-- <div class="menu-aside" id="menu-aside">
+      <div class="menu-aside" id="menu-aside">
         <div class=" menu-header">
           <img class=" logo-menu-svg" src="./assets/img/logotype-responsivo.svg" style="width: 200px; height: 64px;" alt="Logo Responsivo">
           <button id="fechar-menu" onClick="Fecharnav()">
@@ -213,7 +212,7 @@
 
 
         </div>
-      </div> -->
+      </div>
 
   </header>
 
@@ -241,8 +240,11 @@
           </div>
 
           <div class="content-1">
-            <figure><img src="./assets/img/acapurana/Parana-soma-8723-casos-de-dengue-e-8-mortes-00740392-0-202303211829-ScaleDownProportional (1).webp" alt=""> </figure>
+            <figure>
+              <picture><img src="./assets/img/acapurana/Parana-soma-8723-casos-de-dengue-e-8-mortes-00740392-0-202303211829-ScaleDownProportional (1).webp" alt="">
+            </figure>
             <span>Paraná soma 8.723 casos de dengue e 8 mortes</span>
+            </picture>
           </div>
 
 
