--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
           <div class="content-1">
             <figure>
-              <picture><img src="./assets/img/acapurana/Parana-soma-8723-casos-de-dengue-e-8-mortes-00740392-0-202303211829-ScaleDownProportional (1).webp" alt="">
+              <picture><img src="./assets/img/acapurana/Parana-som-compress.webp" alt="">
             </figure>
             <span>Paraná soma 8.723 casos de dengue e 8 mortes</span>
             </picture>
