--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
   <link rel="preconnect" href="https://pabloaugustto.github.io/TNonline/">
   <link rel="dns-prefetch" href="https://pabloaugustto.github.io/TNonline/">
+  <link rel="preload" href="./assets/img/acapurana/Parana-som-compress.webp" as="image" fetchpriority="high">
   <link rel="preload" href="./assets/header/tnonline.png" as="image" fetchpriority="high">
-  <link rel="preload" href="./assets/img/acapurana/Parana-soma-8723-casos-de-dengue-e-8-mortes-00740392-0-202303211829-ScaleDownProportional (1).webp" as="image" fetchpriority="high">
+
   <link rel="preload" href="./fonts/Lato-Regular.ttf" as="font" type="font/otf" crossorigin="">
 
   <link rel="preload" href="./fonts/Lato-Bold.ttf" as="font" type="font/otf" crossorigin="">
