font changes/ lcp img compress

--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
   <link rel="dns-prefetch" href="https://pabloaugustto.github.io/TNonline/">
   <link rel="preload" href="./assets/img/acapurana/Parana-som-compress.webp" as="image" fetchpriority="high">
   <link rel="preload" href="./assets/header/tnonline.png" as="image" fetchpriority="high">
-
   <link rel="preload" href="./fonts/Lato-Regular.ttf" as="font" type="font/otf" crossorigin="">
-
   <link rel="preload" href="./fonts/Lato-Bold.ttf" as="font" type="font/otf" crossorigin="">
   <link rel="preload" href="./fonts/Lato-Thin.ttf" as="font" type="font/otf" crossorigin="">
   <link rel="preload" href="./apuracana.css" as="script" type="font/otf" crossorigin="">
-
-
   <link rel="stylesheet" href="./assets/css/base.css">
   <link rel="stylesheet" href="./assets/css/componets/topresponsivo.css">
   <link rel="stylesheet" href="./apuracana.css">
@@ -233,16 +229,16 @@
 
 
           <div class="social-nav">
-            <a href="facebook" class="social-fb"><img src="./assets/img/svg-social/facebook.svg" style="color:blue" alt="facebook"></a>
-            <a href="whatsapp" class="social-whats"><img src="./assets/img/svg-social/whatsappbranco.svg" alt="whatsapp"></a>
-            <a href="impresso" class="social-impresso"><img src="./assets/img/svg-social/newspaperbranco.svg" alt="impresso"></a>
-            <a href="twitter" class="social-twitter"><img src="./assets/img/svg-social/twitter.svg" alt="twitter"></a>
-            <a aria-label="comentarios" href="/comentarios" title="comentarios" class="social-comentarios"><img src="./assets/img/svg-social/comment-articlebranco.svg" alt="comentários"></a>
+            <a href="facebook" class="social-fb"><img src="./assets/img/svgwhite/facebook-fwhite.svg" alt="facebook"></a>
+            <a href="whatsapp" class="social-whats"><img src="./assets/img/svgwhite/whatsappwhite.svg" alt="whatsapp"></a>
+            <a href="impresso" class="social-impresso"><img src="./assets/img/svgwhite/envelope-open-text-solidwhite.svg" alt="impresso"></a>
+            <a href="twitter" class="social-twitter"><img src="./assets/img/svgwhite/twitterwhite.svg" alt="twitter"></a>
+            <a aria-label="comentarios" href="/comentarios" title="comentarios" class="social-comentarios"><img src="./assets/img/svgwhite/comment-solidwhite.svg" alt="comentários"></a>
           </div>
 
           <div class="content-1">
             <figure>
-              <picture><img src="./assets/img/acapurana/Parana-som-compress.webp" alt="">
+              <picture><img src="./assets/img/acapurana/Universidade-Estadual-do-Centro-Oeste-Unicentro-00741084-0-202303231523-ScaleDownProportional-min.webp" alt="">
             </figure>
             <span>Paraná soma 8.723 casos de dengue e 8 mortes</span>
             </picture>
@@ -288,6 +284,7 @@
           <p>De acordo com o informe, Bom Sucesso contabiliza 33 casos confirmados - 12 a mais que na semana passada - 132 notificações. O município tem 7.103 habitantes e a incidência da doença é de 633,54. </p>
           <p>Ao todo, onze municípios da área da 16ª RS registraram casos de dengue: Apucarana (29), Arapongas (43), Cambira (4), Faxinal (15), Grandes Rios (1), Jandaia do Sul (24), Kaloré (4), Marumbi (1) e Sabáudia (2).</p>
           <p>O chefe da 16ª RS, Marcos Costa, afirma que a situação dos municípios está sendo acompanhada, sobretudo as regiões com índices altos de infestação do mosquito e de casos. "A gente vai dar apoio, orientações para que os municípios desenvolvam trabalhos principalmente para a eliminação de criadouros", ressalta. </p>
+          <p><b>Por Fernando Klein</b></p>
         </div>
 
         <div class="google-news-mobile">
