--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="preload" href="./fonts/Lato-Regular.ttf" as="font" type="font/otf" crossorigin="">
   <link rel="preload" href="./fonts/Lato-Bold.ttf" as="font" type="font/otf" crossorigin="">
   <link rel="preload" href="./fonts/Lato-Thin.ttf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="./fonts/Lato-Black.ttf" as="font" type="font/otf" crossorigin="">
   <link rel="preload" href="./apuracana.css" as="script" type="font/otf" crossorigin="">
   <link rel="stylesheet" href="./assets/css/base.css">
   <link rel="stylesheet" href="./assets/css/componets/topresponsivo.css">
