--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <link rel="dns-prefetch" href="https://pabloaugustto.github.io/TNonline/">
   <link rel="preload" href="./assets/img/acapurana/Parana-som-compress.webp" as="image" fetchpriority="high">
   <link rel="preload" href="./assets/header/tnonline.png" as="image" fetchpriority="high">
-  <link rel="preload" href="fonts/Lato-Regular.ttf" as="font" type="font/otf" crossorigin="">
-  <link rel="preload" href="fonts/Lato-Bold.ttf" as="font" type="font/otf" crossorigin="">
-  <link rel="preload" href="fonts/Lato-Thin.ttf" as="font" type="font/otf" crossorigin="">
-  <link rel="preload" href="fonts/Lato-Black.ttf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="../TNOnline/fonts/Lato-Regular.ttf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="../TNOnline/fonts/Lato-Bold.ttf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="../TNOnline/fonts/Lato-Thin.ttf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="../TNOnline/fonts/Lato-Black.ttf" as="font" type="font/otf" crossorigin="">
   <link rel="preload" href="./apuracana.css" as="script" type="font/otf" crossorigin="">
   <link rel="stylesheet" href="./assets/css/base.css">
   <link rel="stylesheet" href="./assets/css/componets/topresponsivo.css">
