font teste por hj é só

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="preload" href="./assets/header/tnonline.png" as="image" fetchpriority="high">
   <link rel="preload" href="./fonts/Lato-Regular.ttf" as="font" type="font/ttf" crossorigin="">
   <link rel="preload" href="./fonts/Lato-Black.ttf" as="font" type="font/ttf" crossorigin="">
+  <link rel="preload" href="./fonts/Lato-Bold.ttf" as="font" type="font/ttf" crossorigin="">
   <link rel="preload" href="./fonts/Lato-Light.ttf" as="font" type="font/ttf" crossorigin="">
   <link rel="preload" href="./fonts/Lato-Thin.ttf" as="font" type="font/ttf" crossorigin="">
   <link rel="preload" href="./apuracana.css" as="script" type="font/otf" crossorigin="">
