--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <link rel="preload" href="./fonts/Lato-Bold.ttf" as="font" type="font/ttf" crossorigin="">
   <link rel="preload" href="./fonts/Lato-Light.ttf" as="font" type="font/ttf" crossorigin="">
   <link rel="preload" href="./fonts/Lato-Thin.ttf" as="font" type="font/ttf" crossorigin="">
-  <link rel="preload" href="./apuracana.css" as="script" type="font/otf" crossorigin="">
+  <link rel="preload" href="./apuracana.css">
   <link rel="stylesheet" href="./assets/css/base.css">
   <link rel="stylesheet" href="./assets/css/componets/topresponsivo.css">
   <link rel="stylesheet" href="./apuracana.css">
   <link rel="stylesheet" href="./assets/css/componets/footerResponsivo.css">
   <link rel="stylesheet" href="./script.js">
-
+  <link rel="shortcut icon" href="./assets/img/svg-colored/tnfav.png">
 
 
 </head>
