--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <link rel="dns-prefetch" href="https://pabloaugustto.github.io/TNonline/">
   <link rel="preload" href="./assets/img/acapurana/Parana-som-compress.webp" as="image" fetchpriority="high">
   <link rel="preload" href="./assets/header/tnonline.png" as="image" fetchpriority="high">
-  <link rel="preload" href="./fonts/Lato-Regular.ttf" as="font" type="font/ttf" crossorigin="">
-  <link rel="preload" href="./fonts/Lato-Black.ttf" as="font" type="font/ttf" crossorigin="">
-  <link rel="preload" href="./fonts/Lato-Bold.ttf" as="font" type="font/ttf" crossorigin="">
-  <link rel="preload" href="./fonts/Lato-Light.ttf" as="font" type="font/ttf" crossorigin="">
-  <link rel="preload" href="./fonts/Lato-Thin.ttf" as="font" type="font/ttf" crossorigin="">
+  <link rel="preload" href="./fonts/Lato-Regular.woff" as="font" type="font/woff" crossorigin="">
+  <link rel="preload" href="./fonts/Lato-Black.woff" as="font" type="font/woff" crossorigin="">
+  <link rel="preload" href="./fonts/Lato-Bold.woff" as="font" type="font/woff" crossorigin="">
+  <link rel="preload" href="./fonts/Lato-Light.woff" as="font" type="font/woff" crossorigin="">
+  <link rel="preload" href="./fonts/Lato-Hairline.woff" as="font" type="font/woff" crossorigin="">
   <link rel="preload" href="./apuracana.css">
   <link rel="stylesheet" href="./assets/css/base.css">
   <link rel="stylesheet" href="./assets/css/componets/topresponsivo.css">
