teste-google fonts

--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
   <link rel="dns-prefetch" href="https://pabloaugustto.github.io/TNonline/">
   <link rel="preload" href="./assets/img/acapurana/Parana-som-compress.webp" as="image" fetchpriority="high">
   <link rel="preload" href="./assets/header/tnonline.png" as="image" fetchpriority="high">
-  <link rel="preload" href="./fonts/Lato-Regular.woff" as="font" type="font/woff" crossorigin="">
+  <!-- <link rel="preload" href="./fonts/Lato-Regular.woff" as="font" type="font/woff" crossorigin="">
   <link rel="preload" href="./fonts/Lato-Black.woff" as="font" type="font/woff" crossorigin="">
   <link rel="preload" href="./fonts/Lato-Bold.woff" as="font" type="font/woff" crossorigin="">
   <link rel="preload" href="./fonts/Lato-Light.woff" as="font" type="font/woff" crossorigin="">
-  <link rel="preload" href="./fonts/Lato-Hairline.woff" as="font" type="font/woff" crossorigin="">
+  <link rel="preload" href="./fonts/Lato-Hairline.woff" as="font" type="font/woff" crossorigin=""> -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
   <link rel="preload" href="./apuracana.css">
   <link rel="stylesheet" href="./assets/css/base.css">
   <link rel="stylesheet" href="./assets/css/componets/topresponsivo.css">
