--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="preload" href="./assets/img/acapurana/Parana-som-compress.webp" as="image" fetchpriority="high">
   <link rel="preconnect" href="https://pabloaugustto.github.io/TNonline/">
   <link rel="dns-prefetch" href="https://pabloaugustto.github.io/TNonline/">
-
+  <link rel="preload" href="./assets/css/componets/topresponsivo.css">
+  <link rel="preload" href="./apuracana.css">
   <link rel="preload" href="./assets/header/tnonline.png" as="image" fetchpriority="high">
   <link rel="preload" href="./assets/fonts/Lato-Black.woff" as="font" type="font/woff" crossorigin="">
   <link rel="preload" href="./assets/fonts/Lato-Bold.woff" as="font" type="font/woff" crossorigin="">
@@ -18,7 +19,6 @@
   <link rel="preload" href="./assets/fonts/Lato-Regular.woff" as="font" type="font/woff" crossorigin="">
   <link rel="preload" href="./assets/fonts/Lato-Thin.woff" as="font" type="font/woff" crossorigin="">
 
-  <link rel="preload" href="./apuracana.css">
   <link rel="stylesheet" href="./assets/css/base.css">
   <link rel="stylesheet" href="./assets/css/componets/topresponsivo.css">
   <link rel="stylesheet" href="./apuracana.css">
