--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <link rel="preload" href="./assets/header/tnonline.png" as="image" fetchpriority="high">
   <link rel="preload" href="./assets/css/componets/topresponsivo.css">
   <link rel="preload" href="./apuracana.css">
-  <link rel="preload" href="./assets/fonts/Lato-Black.woff" as="font" type="font/woff" crossorigin="">
+  <!-- <link rel="preload" href="./assets/fonts/Lato-Black.woff" as="font" type="font/woff" crossorigin="">
   <link rel="preload" href="./assets/fonts/Lato-Bold.woff" as="font" type="font/woff" crossorigin="">
   <link rel="preload" href="./assets/fonts/Lato-Light.woff" as="font" type="font/woff" crossorigin="">
   <link rel="preload" href="./assets/fonts/Lato-Regular.woff" as="font" type="font/woff" crossorigin="">
-  <link rel="preload" href="./assets/fonts/Lato-Thin.woff" as="font" type="font/woff" crossorigin="">
+  <link rel="preload" href="./assets/fonts/Lato-Thin.woff" as="font" type="font/woff" crossorigin=""> -->
 
   <link rel="stylesheet" href="./assets/css/base.css">
   <link rel="stylesheet" href="./assets/css/componets/topresponsivo.css">
